--- a/action.yml
+++ b/action.yml
@@ -6,9 +6,15 @@ runs:
     - name: "Install dependencies"
       run: "sudo apt-get install -y cmake build-essential srecord unzip wget --quiet"
       shell: "bash"
-    - name: "Install ARM embedded toolchain"
+    - name: "Download"
       shell: "bash"
       run: |
-        wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 &&
-        sudo tar xjf gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -C /usr/share/ &&
+        wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
+    - name: "Unzip"
+      shell: "bash"
+      run: |
+        sudo tar xjf gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -C /usr/share/
+    - name: "Link"
+      shell: "bash"
+      run: |
         sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major/bin/* /usr/bin/
