--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,10 @@ runs:
       shell: "bash"
       run: |
         wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
+    - name: "Verify checksum"
+      shell: "bash"
+      run: |
+        echo "21134caa478bbf5352e239fbc6e2da3038f8d2207e089efc96c3b55f1edcd618 gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2" | sha256sum --check 
     - name: "Unzip"
       shell: "bash"
       run: |
