--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ runs:
     - name: "Verify checksum"
       shell: "bash"
       run: |
-        echo "21134caa478bbf5352e239fbc6e2da3038f8d2207e089efc96c3b55f1edcd618 gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2" | sha256sum --check 
+        echo "21134caa478bbf5352e239fbc6e2da3038f8d2207e089efc96c3b55f1edcd618 gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2" | sha256sum --check --strict
     - name: "Unzip"
       shell: "bash"
       run: |
