--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ runs:
     - name: "Download"
       shell: "bash"
       run: |
-        wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
+        curl -L https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -O
     - name: "Verify checksum"
       shell: "bash"
       run: |
