--- a/action.yml
+++ b/action.yml
@@ -4,12 +4,12 @@ runs:
   using: "composite"
   steps:
     - name: "Install dependencies"
-      run: "sudo apt-get install -y srecord --quiet"
+      run: "sudo apt-get install -qq -o Dpkg::Use-Pty=0 srecord --quiet"
       shell: "bash"
     - name: "Download"
       shell: "bash"
       run: |
-        curl -L https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -O
+        curl --silent -L https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -O
     - name: "Verify checksum"
       shell: "bash"
       run: |
