Exit with error if command not found

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install
         uses: marvinschopf/install-gcc-arm-none-eabi@main
       - name: Test
-        run: if ! command -v arm-none-eabi-gcc&>/dev/null;then echo "arm-none-eabi-gcc could not be found";exit;fi
+        run: if ! command -v arm-none-eabi-gcc&>/dev/null;then echo "arm-none-eabi-gcc could not be found";exit 1;fi
